--- a/index.html
+++ b/index.html
@@ -2,10 +2,59 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+  <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
 	<title>Feeds</title>
+	<link rel="stylesheet" href="styles/reset.css">
 	<link rel="stylesheet" href="styles/app.css">
 </head>
 <body>
+
+	<section class="feedWrapper">
+		<header class="feedHeader">
+			<div class="container">
+				<span class="menu"></span>
+			</div>
+		</header>
+		<section class="feedBody">
+			<div class="container">
+				<section class="cardHeader">
+					<div class="headerContent">
+						<div class="headerImage"></div>
+						<h1 class="headerTitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h1>
+						<div class="clearfix"></div>
+					</div>
+				</section>
+				<section class="cardHeader">
+					<div class="headerContent">
+						<div class="headerImage"></div>
+						<h1 class="headerTitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h1>
+						<div class="clearfix"></div>
+					</div>
+				</section>
+				<section class="cardHeader">
+					<div class="headerContent">
+						<div class="headerImage"></div>
+						<h1 class="headerTitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h1>
+						<div class="clearfix"></div>
+					</div>
+				</section>
+				<section class="cardHeader">
+					<div class="headerContent">
+						<div class="headerImage"></div>
+						<h1 class="headerTitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h1>
+						<div class="clearfix"></div>
+					</div>
+				</section>
+				<section class="cardHeader">
+					<div class="headerContent">
+						<div class="headerImage"></div>
+						<h1 class="headerTitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h1>
+						<div class="clearfix"></div>
+					</div>
+				</section>
+			</div>
+		</section>
+	</section>
 	
 	<script src="scripts/angular.min.js"></script>
 </body>
