--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="styles/app.css">
 </head>
 <body>
-
+	
 	<section class="feedWrapper">
 		<header class="feedHeader">
 			<div class="container">
@@ -17,6 +17,34 @@
 		</header>
 		<section class="feedBody">
 			<div class="container">
+				<section class="cardHeader">
+					<div class="headerContent">
+						<div class="headerImage"></div>
+						<h1 class="headerTitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h1>
+						<div class="clearfix"></div>
+					</div>
+				</section>			
+				<section class="cardHeader">
+					<div class="headerContent">
+						<div class="headerImage"></div>
+						<h1 class="headerTitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h1>
+						<div class="clearfix"></div>
+					</div>
+				</section>
+				<section class="cardHeader">
+					<div class="headerContent">
+						<div class="headerImage"></div>
+						<h1 class="headerTitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h1>
+						<div class="clearfix"></div>
+					</div>
+				</section>
+				<section class="cardHeader">
+					<div class="headerContent">
+						<div class="headerImage"></div>
+						<h1 class="headerTitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h1>
+						<div class="clearfix"></div>
+					</div>
+				</section>
 				<section class="cardHeader">
 					<div class="headerContent">
 						<div class="headerImage"></div>
